fix: remove scrollbar for PopUp in Chrome

--- a/src/components/PopUp/PopUp.module.scss
+++ b/src/components/PopUp/PopUp.module.scss
@@ -34,6 +34,10 @@
   }
 }
 
+.popUp::-webkit-scrollbar {
+  display: none;
+}
+
 .popUpWrapper {
   display: flex;
   flex-direction: column;
